refactor: use Files.writeString (Java 11+)
Motivation:
Files.writeString was introduced in Java 11 and provides a cleaner API
for writing a String to a file, replacing the
Files.write(path, str.getBytes(charset)) pattern.

Modification:
Replace Files.write(path, str.getBytes(charset)) with
Files.writeString(path, str, charset) in file module tests.

Result:
More idiomatic Java 11+ code with identical behavior.

Tests:
Not run - behavior-preserving refactoring

References:
None - Java 11+ API migration